service worker: s13n: Don't show CORS fallback responses in DevTools.

DevTools recognizes the string "Service Worker Fallback Required"
(see issue 477685) and doesn't show the response in that case.

Bug: 893459
Change-Id: Ieadd2d1ce3e738b866ae78d20396c36fb8880c75
Reviewed-on: https://chromium-review.googlesource.com/c/1276065
Reviewed-by: Tsuyoshi Horo <horo@chromium.org>
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598709}
Former-commit-id: b6bd3f0297d8ebb3e76908e83295cb17fdffcc92